--- a/filebeat/templates/daemonset.yaml
+++ b/filebeat/templates/daemonset.yaml
@@ -23,6 +23,7 @@ spec:
       maxUnavailable: {{ .Values.maxUnavailable | default 1 }}
     {{- end }}
     type: {{ .Values.updateStrategy }}
+  {{- end }}
   template:
     metadata:
       annotations:
