--- a/filebeat/values.yaml
+++ b/filebeat/values.yaml
@@ -136,7 +136,7 @@ priorityClassName: ""
 
 updateStrategy: RollingUpdate
 # Only used when updateStrategy is set to "RollingUpdate"
-MaxUnavalaible: 1
+maxUnavailable: 1
 
 # Override various naming aspects of this chart
 # Only edit these if you know what you're doing
